Fixed spacing on index.html for the hero section.

--- a/base/static/css/Navigation-with-Button.css
+++ b/base/static/css/Navigation-with-Button.css
@@ -330,3 +330,9 @@ a.custom-card:hover {
   }
 }
 
+.hero-img-sizing {
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+}
